Adjusted CSS for card color, updated JS
JS updates:
made it so that the current month and day is displayed next to day of the week
updated search bar script and functions for efficiency

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,7 +8,7 @@ body {
   width: 700px;
   border-width: 5px;
   border-color: rgb(103, 64, 185);
-  background-color: #fcc5c0;
+  background-color: #f0e3ff;
 }
 .main-card {
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
