Adjusted card margin in CSS. minor tweaks to index.html
Minor tweaks include changing MPH to km/h for accuracy, changing signature on the page

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,7 +4,7 @@ body {
 }
 .card {
   display: block;
-  margin: 0 auto;
+  margin: 30px auto;
   width: 700px;
   border-width: 5px;
   border-color: #6740b9;
