Connected the main weather icon to weather data in JS
Adjusted styles.css and index.html to accommodate JS changes. For Javascript, added new icon function, removed redundant code.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -21,8 +21,8 @@ body {
   font-size: 24px;
   color: #c689c6;
 }
-.main-icon {
-  font-size: 160px;
+#big-icon {
+  font-size: 150px;
   color: #c689c6;
 }
 .search-bar {
